sna: Do not query for the NULL edid property

If the EDID blob id is set to 0, that means that it does not exist and
so we can safely skip it.

References: https://bugs.freedesktop.org/show_bug.cgi?id=55193
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>